--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.1",
+    "@react-native-community/slider": "^4.4.2",
     "expo-av": "13.10.6",
     "expo-speech": "11.7.0",
     "react": "18.2.0",
